[package]
name = "derivative"
version = "0.0.2"
authors = ["mcarton <cartonmartin+git@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://mcarton.github.io/rust-derivative/"
repository = "https://github.com/mcarton/rust-derivative"
description = "A set of alternative `derive` attributes for Rust"
keywords = ["derive", "macro", "macro1-1", "plugin"]

[lib]
proc-macro = true

[dependencies]
quote = "^0.3"
syn = { version = "0.9", features = ["aster", "full", "visit"] }

[dev-dependencies]
compiletest_rs = "^0.2"
