[package]
name = "derivative"
version = "1.0.2"
authors = ["mcarton <cartonmartin+git@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://mcarton.github.io/rust-derivative/"
repository = "https://github.com/mcarton/rust-derivative"
description = "A set of alternative `derive` attributes for Rust"
keywords = ["derive", "macro", "macro1-1", "plugin"]
categories = ["rust-patterns"]

[badges]
travis-ci = { repository = "mcarton/rust-derivative" }
appveyor = { repository = "mcarton/rust-derivative" }

[lib]
proc-macro = true

[dependencies]
compiletest_rs = { version = "^0.3.14", optional = true }
proc-macro2 = "^0.4.13"
quote = "^0.6.3"
syn = { version = "^0.15.10", features = ["full", "visit", "extra-traits"] }

[features]
test-nightly = ["compiletest_rs"]
use_core = []
