[package]
name = "derivative"
version = "2.1.0"
authors = ["mcarton <cartonmartin+git@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://mcarton.github.io/rust-derivative/"
repository = "https://github.com/mcarton/rust-derivative"
description = "A set of alternative `derive` attributes for Rust"
keywords = ["derive", "macro", "macro1-1", "plugin"]
categories = ["rust-patterns"]

[badges]
travis-ci = { repository = "mcarton/rust-derivative" }
appveyor = { repository = "mcarton/rust-derivative" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.3", features = ["visit", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0.18"

[features]
use_core = []
